code/force-app/main/default/objects/Negotiation_Detail__c/Negotiation_Detail__c.object-meta.xml
<CustomObject>
    <label>是否逐筆議價</label>
    <nameField>
        <label>CreditLensID</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>