code/force-app/main/default/objects/Negotiation_Detail__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>客戶</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>是否逐筆議價</relationshipLabel>
    <relationshipName>Negotiation_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>