code/force-app/main/default/objects/Negotiation_Detail__c/fields/Facility_ID__c.field-meta.xml
<CustomField>
    <fullName>Facility_ID__c</fullName>
    <label>額度ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>