code/force-app/main/default/objects/Negotiation_Detail__c/fields/Individual_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Individual_Negotiation__c</fullName>
    <label>逐筆議價</label>
    <length>60</length>
    <type>Text</type>
</CustomField>