code/force-app/main/default/objects/Negotiation_Detail__c/fields/Negotiation_Detail_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Detail_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>是否逐筆議價外鍵</label>
    <length>200</length>
    <type>Text</type>
</CustomField>