code/force-app/main/default/objects/Negotiation_Detail__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>類型</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>放款</fullName>
            </value>
            <value>
                <fullName>貿融</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>