code/force-app/main/default/objects/Negotiation_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Facility_ID__c</columns>
    <columns>Individual_Negotiation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>